# Bolgrot

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO  pyproject.toml
Bolgrot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __main__.py  actions.py  constant.py  game.py  renderer.py
src/BFS/: __init__.py  bfs.py
src/button/: __init__.py  button.py
src/case/: __init__.py  case.py
src/config/: bolgrot.map
src/entity/: __init__.py  bolgrot.py  entity.py  flame.py  player.py
src/map/: __init__.py  map.py
src/patterns/: __init__.py  patterns.json  patterns.py  patterns_scraped.json
src/spells/: __init__.py  long_jump.py  move_flames.py  short_jump.py  spells.py
src/sprites_png/: inaction.xcf  long_jump.xcf  short_jump.xcf
