[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Bolgrot"
version = "0.1.0"
description = "Bolgrot solver"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.6.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
bolgrot = "src.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["config/*.map", "sprites_png/*.png"]